--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.nightonke:boommenu:2.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
