--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,18 @@
         <activity
             android:name=".screens.login.LogInActivity"
             android:theme="@style/AppTheme.Dark">
+        </activity>
+        <activity android:name=".screens.signup.SignUpActivity"></activity>
+        <activity
+            android:name=".screens.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.signup.SignUpActivity"></activity>
-        <activity
-            android:name=".screens.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
