--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,14 +25,18 @@ android {
     }
 }
 
+ext {
+    rx_java2_vers = "2.1.8"
+    rx_android_vers = "2.1.0"
+    retrofit_vers = "2.5.0"
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.android.support:design:28.0.0'
@@ -42,8 +46,15 @@ dependencies {
     implementation 'com.github.lzyzsd:circleprogress:1.1.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_vers"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_vers"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_vers"
+    implementation "io.reactivex.rxjava2:rxjava:$rx_java2_vers"
+    implementation "io.reactivex.rxjava2:rxandroid:$rx_android_vers"
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
