--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.elenaneacsu.healthmate"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -36,25 +36,28 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
-
-    implementation 'com.google.firebase:firebase-firestore:18.2.0'
-    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.nightonke:boommenu:2.1.1'
     implementation 'com.github.lzyzsd:circleprogress:1.1.0'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
+    implementation 'com.karumi:dexter:5.0.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_vers"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_vers"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_vers"
     implementation "io.reactivex.rxjava2:rxjava:$rx_java2_vers"
     implementation "io.reactivex.rxjava2:rxandroid:$rx_android_vers"
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 apply plugin: 'com.google.gms.google-services'
