--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.elenaneacsu.healthmate"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.nightonke:boommenu:2.1.1'
     implementation 'com.github.lzyzsd:circleprogress:1.1.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'com.github.yingLanNull:CircleAlarmTimerView:00a0125a72'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
