--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         <activity
             android:name=".screens.login.LogInActivity"
             android:theme="@style/AppTheme.Dark">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".screens.signup.SignUpActivity" />
         <activity
@@ -31,13 +36,8 @@
         <activity android:name=".screens.LogFoodActivity" />
         <activity android:name=".screens.FoodDetailActivity" />
         <activity android:name=".screens.profile.EditProfileActivity" />
-        <activity android:name=".screens.SleepActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".screens.SleepActivity"></activity>
+        <activity android:name=".screens.recipe.RecipeActivity"></activity>
     </application>
 
 </manifest>
