--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,12 @@ dependencies {
     implementation 'com.nightonke:boommenu:2.1.1'
     implementation 'com.github.lzyzsd:circleprogress:1.1.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.github.yingLanNull:CircleAlarmTimerView:00a0125a72'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
     implementation 'com.karumi:dexter:5.0.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_vers"
