--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,29 +16,32 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".screens.login.LogInActivity"
-            android:theme="@style/AppTheme.Dark">
+            android:theme="@style/AppTheme.Dark"></activity>
+        <activity android:name=".screens.signup.SignUpActivity" />
+        <activity
+            android:name=".screens.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".screens.logging.water.LogWaterActivity" />
+        <activity
+            android:name=".screens.logging.water.WaterAnimationActivity"
+            android:label=""
+            android:theme="@style/Theme.Transparent" />
+        <activity android:name=".screens.logging.food.LogFoodActivity" />
+        <activity android:name=".screens.logging.food.FoodDetailActivity" />
+        <activity android:name=".screens.profile.EditProfileActivity" />
+        <activity android:name=".screens.logging.sleep.LogSleepActivity" />
+        <activity
+            android:name=".screens.recipe.RecipeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".screens.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.signup.SignUpActivity" />
-        <activity
-            android:name=".screens.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".screens.LogWaterActivity" />
-        <activity
-            android:name=".screens.WaterAnimationActivity"
-            android:label=""
-            android:theme="@style/Theme.Transparent" />
-        <activity android:name=".screens.LogFoodActivity" />
-        <activity android:name=".screens.FoodDetailActivity" />
-        <activity android:name=".screens.profile.EditProfileActivity" />
-        <activity android:name=".screens.SleepActivity"></activity>
-        <activity android:name=".screens.recipe.RecipeActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".screens.logging.sleep.SleepAdviceActivity"></activity>
     </application>
 
 </manifest>
