--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_vers"
     implementation "io.reactivex.rxjava2:rxjava:$rx_java2_vers"
     implementation "io.reactivex.rxjava2:rxandroid:$rx_android_vers"
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
