--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.logging.sleep.SleepAdviceActivity"></activity>
+        <activity android:name=".screens.logging.sleep.SleepAdviceActivity" />
         <activity android:name=".screens.logging.exercise.LogExerciseActivity" />
         <activity android:name=".screens.logging.exercise.ExerciseDetailActivity" />
-        <activity android:name=".screens.logging.weight_history.AddWeightRecordActivity"></activity>
+        <activity android:name=".screens.logging.weight_history.AddWeightRecordActivity" />
+        <activity android:name=".screens.login.ForgotPasswordActivity" />
+        <activity android:name=".screens.logging.food.ScannerActivity"></activity>
     </application>
 
 </manifest>
